# learn-ai

./: Learn_AI.py  README.md  pyproject.toml
agents/: data_query_agent.py  financial_analyst_agent.py  shopwise_agent.py  simple_rag_agent.py  youtube_video_summarizer_agent.py
common/: agent.py  chat.py  file_uploader.py  langgraph.py  page.py  sqlite.py  theme.py
pages/: BM25_vs_Vector_Search.py  Contextual_Retrieval_RAG.py  Data_Query_Agent.py  Demystify_RAG.py  Document_Chunking.py  Financial_Analyst_Agent.py  Graph_RAG.py  Hybrid_Search_RAG.py  ShopWise_Agent.py  Simple_RAG.py  Youtube_Video_Summarizer.py
tools/: simple_rag_tools.py
tools/financial_analyst/: ticker_historical_data_info.py  ticker_price_info.py
