[tool.poetry]
name = "learn-ai"
version = "0.1.0"
description = "Learn AI"
authors = ["Rahul Bhatia <rahul.bhatia023@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
watchdog = "^6.0.0"
black = "^24.10.0"
langchain-openai = "^0.2.8"
langgraph = "^0.2.48"
langchain-community = "^0.3.7"
pypdf = "^5.1.0"
faiss-cpu = "^1.9.0"
langchain-experimental = "^0.3.3"
graphviz = "^0.20.3"
neo4j = "^5.27.0"
langchain-neo4j = "^0.1.1"
rank-bm25 = "^0.2.2"
streamlit-extras = "^0.5.0"
llama-parse = "^0.5.17"
tavily-python = "^0.5.0"
yfinance = "^0.2.51"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
